--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sb.fittingkeyboard.com.sb.fittingkeyboard.keyboardSettings.MainActivity"
+    tools:context="com.sb.fittingKeyboard.keyboardSettings.MainActivity"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <androidx.appcompat.widget.Toolbar
@@ -15,7 +15,7 @@
         android:background="#007BFF"
         android:minHeight="50dp"
         android:theme="@style/appBar"
-        app:layout_constraintBottom_toTopOf="@+id/setting_main_tabLayout"
+        app:layout_constraintBottom_toTopOf="@id/setting_main_tabLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,10 +24,10 @@
         android:id="@+id/setting_main_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/setting_main_viewPager"
+        app:layout_constraintBottom_toTopOf="@id/setting_main_viewPager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tb_MainAct"
+        app:layout_constraintTop_toBottomOf="@id/tb_MainAct"
         app:tabIndicatorColor="#007BFF"
         app:tabSelectedTextColor="#007BFF"
         app:tabTextColor="@color/black" />
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toTopOf="@id/textInputEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/setting_main_tabLayout" />
+        app:layout_constraintTop_toBottomOf="@id/setting_main_tabLayout" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/textInputEditText"
@@ -58,6 +58,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/setting_main_viewPager" />
+        app:layout_constraintTop_toBottomOf="@id/setting_main_viewPager" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
