--- a/app/src/main/res/layout/dialog_font_type.xml
+++ b/app/src/main/res/layout/dialog_font_type.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/dialog_FontType_ok"
+        app:layout_constraintBottom_toTopOf="@id/dialog_FontType_ok"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_FontType_tv">
