--- a/app/src/main/res/layout/key_layout_normal.xml
+++ b/app/src/main/res/layout/key_layout_normal.xml
@@ -111,6 +111,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/white"
+                android:onClick="@{() -> kbviewmodel.changeMode(9)}"
                 android:src="@drawable/ic_number_keypad" />
         </LinearLayout>
 
@@ -125,7 +126,7 @@
             <ImageView
                 android:id="@+id/keyboardBackgroundImage"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="0dp"
                 android:contentDescription="KeyboardBackgroundImage"
                 android:scaleType="centerCrop" />
 
@@ -141,7 +142,8 @@
                 <LinearLayout
                     android:id="@+id/firstLine"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/default_keyboard_Number_Height"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.18"
                     android:orientation="horizontal"
                     android:visibility="@{kbviewmodel.observeNumberVisibility}">
 
@@ -159,7 +161,7 @@
                         android:onClick="@{(v) -> kbservice.inputChar(v, true)}"
                         android:text="1"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn2"
@@ -168,7 +170,7 @@
                         android:layout_weight="1"
                         android:text="2"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn3"
@@ -177,7 +179,7 @@
                         android:layout_weight="1"
                         android:text="3"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn4"
@@ -186,7 +188,7 @@
                         android:layout_weight="1"
                         android:text="4"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn5"
@@ -195,7 +197,7 @@
                         android:layout_weight="1"
                         android:text="5"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn6"
@@ -204,7 +206,7 @@
                         android:layout_weight="1"
                         android:text="6"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn7"
@@ -213,7 +215,7 @@
                         android:layout_weight="1"
                         android:text="7"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize * 2 + 14}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn8"
@@ -222,7 +224,7 @@
                         android:layout_weight="1"
                         android:text="8"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize * 2 + 14}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn9"
@@ -231,7 +233,7 @@
                         android:layout_weight="1"
                         android:text="9"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize * 2 + 14}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/btn0"
@@ -240,7 +242,7 @@
                         android:layout_weight="1"
                         android:text="0"
                         android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
-                        android:textSize="@{kbviewmodel.observeKBFontSize * 2 + 14}" />
+                        android:textSize="@{kbservice.fontSize}" />
 
                     <Button
                         android:id="@+id/keyboardNumberRightMargin"
@@ -253,7 +255,8 @@
                 <LinearLayout
                     android:id="@+id/keyboardViewLinearLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.82"
                     android:orientation="horizontal">
 
                     <FrameLayout
